--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         </div>
     </header>
 
+    <main id="content"></main>
+
     <script src="src/javascript/script.js"></script>
 </body>
 </html>
