--- a/index.html
+++ b/index.html
@@ -53,7 +53,46 @@
         </div>
     </header>
 
-    <main id="content"></main>
+    <main id="content">
+        <section id="home">
+            <div class="shape"></div>
+            <div id="cta">
+                <h1 class="tittle">
+                    O sabor vai até 
+                    <span>você</span>
+                </h1>
+                <p class="description">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut aspernatur aperiam quos neque. Voluptatum consequuntur aut officia doloremque laborum magnam, ratione eligendi aperiam repellendus. Nihil dolore nemo nesciunt iste consectetur?
+                </p>
+                <div id="cta_buttons">
+                    <a href="#" class="btn-default">
+                        Ver cardápio
+                    </a>
+                    <a href="tel:+5555555555" id="phone_button">
+                        <button class="btn-default">
+                            <i class="fa-solid fa-phone"></i>
+                            (51) 92342-3243
+                        </button>
+                    </a>
+                </div>
+                <div class="social-media-buttons">
+                    <a href="">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a>
+                    <a href="">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                </div>
+            </div>
+
+            <div id="banner">
+                <img src="src/images/hero.png" alt="Três pratos diferentes de comida">
+            </div>
+        </section>
+    </main>
 
     <script src="src/javascript/script.js"></script>
 </body>
