home css and responsive

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="src/styles/style.css">
     <link rel="stylesheet" href="src/styles/header.css">
+    <link rel="stylesheet" href="src/styles/home.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Restaurante Food</title>
 </head>
@@ -58,11 +59,11 @@
             <div class="shape"></div>
             <div id="cta">
                 <h1 class="tittle">
-                    O sabor vai até 
+                    O sabor que vai até 
                     <span>você</span>
                 </h1>
                 <p class="description">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut aspernatur aperiam quos neque. Voluptatum consequuntur aut officia doloremque laborum magnam, ratione eligendi aperiam repellendus. Nihil dolore nemo nesciunt iste consectetur?
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum consequuntur aut officia doloremque laborum magnam.
                 </p>
                 <div id="cta_buttons">
                     <a href="#" class="btn-default">
@@ -71,8 +72,8 @@
                     <a href="tel:+5555555555" id="phone_button">
                         <button class="btn-default">
                             <i class="fa-solid fa-phone"></i>
-                            (51) 92342-3243
                         </button>
+                        (51) 92342-3243
                     </a>
                 </div>
                 <div class="social-media-buttons">
