--- a/index.html
+++ b/index.html
@@ -1,100 +1,230 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="src/styles/style.css">
-    <link rel="stylesheet" href="src/styles/header.css">
-    <link rel="stylesheet" href="src/styles/home.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="src/styles/style.css" />
+    <link rel="stylesheet" href="src/styles/header.css" />
+    <link rel="stylesheet" href="src/styles/home.css" />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+      integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <title>Restaurante Food</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav id="navbar">
-            <i class="fa-solid fa-burger" id="nav-logo"> food</i>
-            <ul id="nav-list">
-                <li class="nav-item active">
-                    <a href="#home">Início</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#menu">Cardápio</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#reviews">Avaliações</a>
-                </li>
-            </ul>
+      <nav id="navbar">
+        <i class="fa-solid fa-burger" id="nav-logo"> food</i>
+        <ul id="nav-list">
+          <li class="nav-item active">
+            <a href="#home">Início</a>
+          </li>
+          <li class="nav-item">
+            <a href="#menu">Cardápio</a>
+          </li>
+          <li class="nav-item">
+            <a href="#reviews">Avaliações</a>
+          </li>
+        </ul>
 
-            <button class="btn-default">
-                Peça aqui
-            </button>
+        <button class="btn-default">Peça aqui</button>
 
-            <button class="mobile-btn">
-                <i class="fa-solid fa-bars"></i>
-            </button>
-        </nav>
+        <button class="mobile-btn">
+          <i class="fa-solid fa-bars"></i>
+        </button>
+      </nav>
 
-        <div id="mobile-menu">
-            <ul id="mobile-nav-list">
-                <li class="nav-item">
-                    <a href="#home">Início</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#menu">Cardápio</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#reviews">Avaliações</a>
-                </li>
-            </ul>
-            
-            <button class="btn-default">
-                Peça aqui
-            </button>
-        </div>
+      <div id="mobile-menu">
+        <ul id="mobile-nav-list">
+          <li class="nav-item">
+            <a href="#home">Início</a>
+          </li>
+          <li class="nav-item">
+            <a href="#menu">Cardápio</a>
+          </li>
+          <li class="nav-item">
+            <a href="#reviews">Avaliações</a>
+          </li>
+        </ul>
+
+        <button class="btn-default">Peça aqui</button>
+      </div>
     </header>
 
     <main id="content">
-        <section id="home">
-            <div class="shape"></div>
-            <div id="cta">
-                <h1 class="tittle">
-                    O sabor que vai até 
-                    <span>você</span>
-                </h1>
-                <p class="description">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum consequuntur aut officia doloremque laborum magnam.
-                </p>
-                <div id="cta_buttons">
-                    <a href="#" class="btn-default">
-                        Ver cardápio
-                    </a>
-                    <a href="tel:+5555555555" id="phone_button">
-                        <button class="btn-default">
-                            <i class="fa-solid fa-phone"></i>
-                        </button>
-                        (51) 92342-3243
-                    </a>
-                </div>
-                <div class="social-media-buttons">
-                    <a href="">
-                        <i class="fa-brands fa-whatsapp"></i>
-                    </a>
-                    <a href="">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                    <a href="">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
-                </div>
-            </div>
+      <section id="home">
+        <div class="shape"></div>
+        <div id="cta">
+          <h1 class="tittle">
+            O sabor que vai até
+            <span>você</span>
+          </h1>
+          <p class="description">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum
+            consequuntur aut officia doloremque laborum magnam.
+          </p>
+          <div id="cta_buttons">
+            <a href="#" class="btn-default"> Ver cardápio </a>
+            <a href="tel:+5555555555" id="phone_button">
+              <button class="btn-default">
+                <i class="fa-solid fa-phone"></i>
+              </button>
+              (51) 92342-3243
+            </a>
+          </div>
+          <div class="social-media-buttons">
+            <a href="">
+              <i class="fa-brands fa-whatsapp"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+          </div>
+        </div>
 
-            <div id="banner">
-                <img src="src/images/hero.png" alt="Três pratos diferentes de comida">
-            </div>
-        </section>
+        <div id="banner">
+          <img
+            src="src/images/hero.png"
+            alt="Três pratos diferentes de comida"
+          />
+        </div>
+      </section>
     </main>
 
+    <section id="menu">
+      <h2 class="section-title">Cardápio</h2>
+      <h3 class="section-subtitle">Nossos pratos especiais</h3>
+
+      <div id="dishes">
+        <div class="dish">
+          <div class="dish-heart">
+            <i class="fa-solid fa-heart"></i>
+          </div>
+
+          <img src="src/images/dish.png" alt="dish-heart" />
+          <h3 class="dish-tittle">Lorem Ipsum</h3>
+          <span class="dish-description"
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit.</span
+          >
+          <div class="dish-rate">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <span>(500+)</span>
+          </div>
+
+          <div class="dish-price">
+            <h4>R$ 20,00</h4>
+            <button class="btn-default">
+              <i class="fa-solid fa-basket-shopping"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div id="dishes">
+        <div class="dish">
+          <div class="dish-heart">
+            <i class="fa-solid fa-heart"></i>
+          </div>
+
+          <img src="src/images/dish2.png" alt="dish-heart" />
+          <h3 class="dish-tittle">Lorem Ipsum</h3>
+          <span class="dish-description"
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit.</span
+          >
+          <div class="dish-rate">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <span>(500+)</span>
+          </div>
+
+          <div class="dish-price">
+            <h4>R$ 20,00</h4>
+            <button class="btn-default">
+              <i class="fa-solid fa-basket-shopping"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div id="dishes">
+        <div class="dish">
+          <div class="dish-heart">
+            <i class="fa-solid fa-heart"></i>
+          </div>
+
+          <img src="src/images/dish3.png" alt="dish-heart" />
+          <h3 class="dish-tittle">Lorem Ipsum</h3>
+          <span class="dish-description"
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit.</span
+          >
+          <div class="dish-rate">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <span>(500+)</span>
+          </div>
+
+          <div class="dish-price">
+            <h4>R$ 20,00</h4>
+            <button class="btn-default">
+              <i class="fa-solid fa-basket-shopping"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div id="dishes">
+        <div class="dish">
+          <div class="dish-heart">
+            <i class="fa-solid fa-heart"></i>
+          </div>
+
+          <img src="src/images/dish4.png" alt="dish-heart" />
+          <h3 class="dish-tittle">Lorem Ipsum</h3>
+          <span class="dish-description"
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit.</span
+          >
+          <div class="dish-rate">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <span>(500+)</span>
+          </div>
+
+          <div class="dish-price">
+            <h4>R$ 20,00</h4>
+            <button class="btn-default">
+              <i class="fa-solid fa-basket-shopping"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="src/javascript/script.js"></script>
-</body>
+  </body>
 </html>
