init testimonials section

--- a/index.html
+++ b/index.html
@@ -220,6 +220,10 @@
           </div>
         </div>
       </section>
+
+      <section id="testimonials">
+        <img src="src/images/chef.png" alt="" />
+      </section>
     </main>
 
     <script src="src/javascript/script.js"></script>
