--- a/index.html
+++ b/index.html
@@ -222,7 +222,56 @@
       </section>
 
       <section id="testimonials">
-        <img src="src/images/chef.png" alt="" />
+        <img src="src/images/chef.png" id="testimonials_chef" alt="" />
+
+        <div id="testimonials_content">
+          <h2 class="section-title">Depoimentos</h2>
+          <h3 class="section-subtitle">O que os clientes falam sobre nós</h3>
+
+          <div id="feedbacks">
+            <div class="feedback">
+              <img src="src/images/avatar.png" class="feedback-avatar" alt="" />
+
+              <div class="feedback-content">
+                <p>
+                  Fulana de Tal
+                  <span>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </span>
+                </p>
+                <p>
+                  "Lorem ipsum, dolor sit amet consectetur adipisicing elit."
+                </p>
+              </div>
+            </div>
+
+            <div class="feedback">
+              <img src="src/images/avatar.png" class="feedback-avatar" alt="" />
+
+              <div class="feedback-content">
+                <p>
+                  Fulana de Tal
+                  <span>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </span>
+                </p>
+                <p>
+                  "Lorem ipsum, dolor sit amet consectetur adipisicing elit."
+                </p>
+              </div>
+            </div>
+
+            <button class="btn-default">Ver mais avaliações</button>
+          </div>
+        </div>
       </section>
     </main>
 
