--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="src/styles/header.css" />
     <link rel="stylesheet" href="src/styles/home.css" />
     <link rel="stylesheet" href="src/styles/menu.css" />
+    <link rel="stylesheet" href="src/styles/testimonials.css" />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
@@ -244,7 +245,8 @@
                   </span>
                 </p>
                 <p>
-                  "Lorem ipsum, dolor sit amet consectetur adipisicing elit."
+                  "Lorem, ipsum dolor sit amet consectetur adipisicing elit
+                  ipsam minus quisquam necessitatibus."
                 </p>
               </div>
             </div>
@@ -264,7 +266,8 @@
                   </span>
                 </p>
                 <p>
-                  "Lorem ipsum, dolor sit amet consectetur adipisicing elit."
+                  "Lorem, ipsum dolor sit amet consectetur adipisicing elit
+                  ipsam minus quisquam necessitatibus."
                 </p>
               </div>
             </div>
