header navItems animation

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <header>
       <nav id="navbar">
         <i class="fa-solid fa-burger" id="nav-logo"> food</i>
+
         <ul id="nav-list">
           <li class="nav-item active">
             <a href="#home">Início</a>
@@ -32,7 +33,7 @@
             <a href="#menu">Cardápio</a>
           </li>
           <li class="nav-item">
-            <a href="#reviews">Avaliações</a>
+            <a href="#testimonials">Avaliações</a>
           </li>
         </ul>
 
@@ -52,7 +53,7 @@
             <a href="#menu">Cardápio</a>
           </li>
           <li class="nav-item">
-            <a href="#reviews">Avaliações</a>
+            <a href="#testimonials">Avaliações</a>
           </li>
         </ul>
 
