--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+
     <title>Restaurante Food</title>
   </head>
   <body>
